2017.11/_sources/plugins/available/vsearch/join-pairs.txt
join-pairs: Join paired-end reads.
==================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime vsearch join-pairs [OPTIONS]

     Join paired-end sequence reads using vsearch's merge_pairs function. The
     qmin, qminout, qmax, and qmaxout parameters should only need to be
     modified when working with older fastq sequence data. See the vsearch
     documentation for details on how paired-end joining is performed, and for
     more information on the parameters to this method.

   Options:
     --i-demultiplexed-seqs PATH     Artifact:
                                     SampleData[PairedEndSequencesWithQuality]
                                     [required]
                                     The demultiplexed paired-end
                                     sequences to be joined.
     --p-truncqual INTEGER RANGE     [optional]
                                     Truncate sequences at the first
                                     base with the specified quality score value
                                     or lower.
     --p-minlen INTEGER RANGE        [default: 1]
                                     Sequences shorter than minlen
                                     after truncation are discarded.
     --p-maxns INTEGER RANGE         [optional]
                                     Sequences with more than maxns N
                                     characters are discarded.
     --p-allowmergestagger / --p-no-allowmergestagger
                                     [default: False]
                                     Allow joining of staggered
                                     read pairs.
     --p-minovlen INTEGER RANGE      [default: 10]
                                     Minimum overlap length of
                                     forward and reverse reads for joining.
     --p-maxdiffs INTEGER RANGE      [default: 10]
                                     Maximum number of mismatches
                                     in the forward/reverse read overlap for
                                     joining.
     --p-minmergelen INTEGER RANGE   [optional]
                                     Minimum length of the joined read
                                     to be retained.
     --p-maxmergelen INTEGER RANGE   [optional]
                                     Maximum length of the joined read
                                     to be retained.
     --p-maxee FLOAT                 [optional]
                                     Maximum number of expected errors
                                     in the joined read to be retained.
     --p-qmin INTEGER RANGE          [default: 0]
                                     The minimum allowed quality
                                     score in the input.
     --p-qminout INTEGER RANGE       [default: 0]
                                     The minimum allowed quality
                                     score to use in output.
     --p-qmax INTEGER RANGE          [default: 41]
                                     The maximum allowed quality
                                     score in the input.
     --p-qmaxout INTEGER RANGE       [default: 41]
                                     The maximum allowed quality
                                     score to use in output.
     --o-joined-sequences PATH       Artifact:
                                     SampleData[JoinedSequencesWithQuality]
                                     [required if not passing --output-dir]
                                     The
                                     joined sequences.
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Join paired-end reads.

   Join paired-end sequence reads using vsearch's merge_pairs function. The
   qmin, qminout, qmax, and qmaxout parameters should only need to be modified
   when working with older fastq sequence data. See the vsearch documentation
   for details on how paired-end joining is performed, and for more
   information on the parameters to this method.

   Parameters
   ----------
   demultiplexed_seqs : SampleData[PairedEndSequencesWithQuality]
       The demultiplexed paired-end sequences to be joined.
   truncqual : Int % Range(0, None), optional
       Truncate sequences at the first base with the specified quality score
       value or lower.
   minlen : Int % Range(0, None), optional
       Sequences shorter than minlen after truncation are discarded.
   maxns : Int % Range(0, None), optional
       Sequences with more than maxns N characters are discarded.
   allowmergestagger : Bool, optional
       Allow joining of staggered read pairs.
   minovlen : Int % Range(0, None), optional
       Minimum overlap length of forward and reverse reads for joining.
   maxdiffs : Int % Range(0, None), optional
       Maximum number of mismatches in the forward/reverse read overlap for
       joining.
   minmergelen : Int % Range(0, None), optional
       Minimum length of the joined read to be retained.
   maxmergelen : Int % Range(0, None), optional
       Maximum length of the joined read to be retained.
   maxee : Float % Range(0.0, None), optional
       Maximum number of expected errors in the joined read to be retained.
   qmin : Int % Range(-5, 2, inclusive_end=True), optional
       The minimum allowed quality score in the input.
   qminout : Int % Range(-5, 2, inclusive_end=True), optional
       The minimum allowed quality score to use in output.
   qmax : Int % Range(40, 41, inclusive_end=True), optional
       The maximum allowed quality score in the input.
   qmaxout : Int % Range(40, 41, inclusive_end=True), optional
       The maximum allowed quality score to use in output.

   Returns
   -------
   joined_sequences : SampleData[JoinedSequencesWithQuality]
       The joined sequences.</pre>
       </div>
     </div>
   </div>